css fix:(on tablet home popup form doesn't show up)

--- a/src/app/home.component.css
+++ b/src/app/home.component.css
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;       
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    height: 100%;
 }
 
 img {
